<resources>
    <string name="app_name">Movie Buff</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="movie_backdrop">Movie Backdrop</string>
    <string name="something_went_wrong">Something Went Wrong </string>
    <string name="retry">Retry</string>

    <string name="movie_backdrop_image">Movie Backdrop Image</string>
    <string name="movie_thumbnail_image">Movie Thumbnail Image</string>
    <string name="release_date">Release Date</string>
    <string name="rating">Rating</string>
    <string name="synopsis">Synopsis</string>
    <string name="trailers">Trailers:</string>
    <string name="status_image">Status Image</string>
    <string name="main_movie_image">Main Movie Image</string>
    <string name="play_image">Play Image</string>
    <string name="trailer_image">Trailer Image</string>
    <string name="top_rated">Top Rated</string>
    <string name="refresh">Refresh</string>
</resources>